fix pom 2nd