@@ -196,15 +196,19 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.8.0</version>
+					<version>3.11.0</version>
 					
 					<configuration>
 						<source>21</source>
 						<target>21</target>
+						<fork>true</fork>
 						<compilerArgs>
 							<arg>--add-exports</arg>
 							<arg>
 								jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>
+								jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
 						</compilerArgs>
 					</configuration>
 				</plugin>
